# NAR_SAT_DP

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements-dev.txt
config/: fields.json  fields.json.example  pipeline.json
docs/: BUILD.md  DECISIONS.md  DISTRIBUTION.md  NAR_SAT_DP_SDS.md  NAR_SAT_DP_SRS.md
packaging/: RELEASE_README.txt  SOURCE_OFFER.txt
references/samples/: new 7.txt  new 8.txt
scripts/: build.ps1  create_sample_archives.py  parse_gnss_preview.py  pyi_entry.py  write_release_metadata.py
scripts/sample_sources/7z/: c.txt
scripts/sample_sources/batch/: a.txt  b.txt
src/nar_sat_dp/: __init__.py  app_paths.py  cli.py  config.py  encoding_util.py  extractors.py  gnss_output.py  gnss_parser.py  gnss_pipeline.py  parser.py  pipeline.py  scanner.py  writer.py
